test/tests/compiler/6_statements_and_conditional_expressions/valid/ternary_middle_assignment.plx
pub fn main(none) i32 {
    a: i32 = 1
    ? a ~= 2 then a = 2 else 0
    return a
}
