test/tests/compiler/6_statements_and_conditional_expressions/invalid_parse/extra_credit/label_declaration.plx
pub fn main(none) i32 {
# NOTE: this is a syntax error in C17 but valid in C23
    label _label
    a: i32 = 0
    return 0
}
